2004-06-03  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc (FileTree::calculate_file_index): Simplify.

2004-06-02  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filebuffer.cc (FileBuffer::create_with_error_message):
	Minor code rearrangement.

2004-06-01  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc (FileTree::find_files): Slightly clarify
	the call to Gtk::TreePath's constructor.

2004-06-01  Daniel Elstner  <daniel.elstner@gmx.net>

	* Makefile.am (ACLOCAL_AMFLAGS): Remove because automake-1.7
	complains about the undefined variable ${ACLOCAL_FLAGS} even
	though it's a shell substitution.

	* configure.ac: Use AC_SUBST() to set up ACLOCAL_AMFLAGS here
	instead, so automake-1.7 won't notice.

2004-06-01  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc (FileTree::expand_and_select): Replace the
	calls to TreeSelection::select() and TreeView::scroll_to_row()
	by a single TreeView::set_cursor() call.
	(FileTree::find_files): After the tree has been filled in, the
	first call to expand_and_select() doesn't always scroll to the
	selected row (no matter if set_cursor() or scroll_to_row() is
	used there).  Explicitely scroll to the first row after filling
	the tree to work around this problem.

2004-06-01  Daniel Elstner  <daniel.elstner@gmx.net>

	* regexxer.desktop.in (Categories): Prepend GNOME to the list.

2004-06-01  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/translation.cc (compose_impl): Remove superfluous namespace
	prefix.

2004-06-01  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/translation.cc (compose): Optimize and reduce executable
	size by replacing std::vector<Glib::ustring> by a POD array of
	pointers to the Glib::ustring arguments.

2004-06-01  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc (FileTree::load_file_with_fallback): Get the
	UTF-8 encoded basename from the filename column of the tree model
	instead of stripping and converting fileinfo->fullname all over
	again.
